[#102][Refactor] 좋아요한 컨텐츠 리스트 api 통합